--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
-@import "tailwindcss";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "@/assets/primevue/tailwind.css";
+@import "tailwindcss/utilities";
 
 @font-face {
     font-family: 'Rahovets';
@@ -27,23 +30,99 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-@theme {
-    --color-primary-50: #fdfaed;
-    --color-primary-100: #f8f1cd;
-    --color-primary-200: #f1e196;
-    --color-primary-300: #e9cc60;
-    --color-primary-400: #e4b93b;
-    --color-primary-500: #dc9c24;
-    --color-primary-600: #ce801e;
-    --color-primary-700: #a2581b;
-    --color-primary-800: #84451c;
-    --color-primary-900: #6d3a1a;
-    --color-primary-950: #3e1d0a;
+:root {
+    --p-primary-50: #fdfaed;
+    --p-primary-100: #f8f1cd;
+    --p-primary-200: #f1e196;
+    --p-primary-300: #e9cc60;
+    --p-primary-400: #e4b93b;
+    --p-primary-500: #dc9c24;
+    --p-primary-600: #ce801e;
+    --p-primary-700: #a2581b;
+    --p-primary-800: #84451c;
+    --p-primary-900: #6d3a1a;
+    --p-primary-950: #3e1d0a;
+    --p-surface-0: #ffffff;
+    --p-surface-50: #fafafa;
+    --p-surface-100: #f4f4f5;
+    --p-surface-200: #e4e4e7;
+    --p-surface-300: #d4d4d8;
+    --p-surface-400: #a1a1aa;
+    --p-surface-500: #71717a;
+    --p-surface-600: #52525b;
+    --p-surface-700: #3f3f46;
+    --p-surface-800: #27272a;
+    --p-surface-900: #18181b;
+    --p-surface-950: #09090b;
+    --p-content-border-radius: 6px;
 }
 
-@theme {
+/* Light */
+:root {
+    --p-primary-color: var(--p-primary-500);
+    --p-primary-contrast-color: var(--p-surface-0);
+    --p-primary-hover-color: var(--p-primary-600);
+    --p-primary-active-color: var(--p-primary-700);
+    --p-content-border-color: var(--p-surface-200);
+    --p-content-hover-background: var(--p-surface-100);
+    --p-content-hover-color: var(--p-surface-800);
+    --p-highlight-background: var(--p-primary-50);
+    --p-highlight-color: var(--p-primary-700);
+    --p-highlight-focus-background: var(--p-primary-100);
+    --p-highlight-focus-color: var(--p-primary-800);
+    --p-text-color: var(--p-surface-700);
+    --p-text-hover-color: var(--p-surface-800);
+    --p-text-muted-color: var(--p-surface-500);
+    --p-text-hover-muted-color: var(--p-surface-600);
     --font-info: 'Rahovets', 'sans-serit'
 }
+
+/*
+ * Dark Mode
+ * Defaults to system, change the selector to match the darkMode in tailwind.config.
+ * For example;
+ * darkMode: ['selector', '[class*="app-dark"]']
+ * should be;
+ * :root[class="app-dark"] {
+*/
+
+/*@media (prefers-color-scheme: dark) {*/
+/*    :root {*/
+/*        --p-primary-color: var(--p-primary-400);*/
+/*        --p-primary-contrast-color: var(--p-surface-900);*/
+/*        --p-primary-hover-color: var(--p-primary-300);*/
+/*        --p-primary-active-color: var(--p-primary-200);*/
+/*        --p-content-border-color: var(--p-surface-700);*/
+/*        --p-content-hover-background: var(--p-surface-800);*/
+/*        --p-content-hover-color: var(--p-surface-0);*/
+/*        --p-highlight-background: color-mix(in srgb, var(--p-primary-400), transparent 84%);*/
+/*        --p-highlight-color: rgba(255, 255, 255, 0.87);*/
+/*        --p-highlight-focus-background: color-mix(in srgb, var(--p-primary-400), transparent 76%);*/
+/*        --p-highlight-focus-color: rgba(255, 255, 255, 0.87);*/
+/*        --p-text-color: var(--p-surface-0);*/
+/*        --p-text-hover-color: var(--p-surface-0);*/
+/*        --p-text-muted-color: var(--p-surface-400);*/
+/*        --p-text-hover-muted-color: var(--p-surface-300);*/
+/*    }*/
+/*}*/
+
+/*@theme {*/
+/*    --color-primary-50: #fdfaed;*/
+/*    --color-primary-100: #f8f1cd;*/
+/*    --color-primary-200: #f1e196;*/
+/*    --color-primary-300: #e9cc60;*/
+/*    --color-primary-400: #e4b93b;*/
+/*    --color-primary-500: #dc9c24;*/
+/*    --color-primary-600: #ce801e;*/
+/*    --color-primary-700: #a2581b;*/
+/*    --color-primary-800: #84451c;*/
+/*    --color-primary-900: #6d3a1a;*/
+/*    --color-primary-950: #3e1d0a;*/
+/*}*/
+
+/*@theme {*/
+/*    --font-info: 'Rahovets', 'sans-serit'*/
+/*}*/
 
 .items-header::after {
     @apply content-["•"] text-blue-500 mx-4
@@ -63,4 +142,145 @@
 .slide-fade-leave-to {
     opacity: 0;
     transform: translateY(-10px);
+}
+
+
+.error-required {
+    @apply flex items-center text-sm text-red-500 mt-0.5 min-h-5;
+}
+
+.label-size {
+    @apply mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300;
+}
+
+.app-label-config {
+    @apply text-xl font-semibold text-black my-1.5 dark:text-surface-0;
+}
+
+.align-item-config {
+    @apply inline-flex flex-col items-start justify-start gap-2 pr-2;
+}
+
+.align-items-form {
+    @apply grid grid-cols-1 items-start justify-start gap-y-1 gap-x-3.5 md:grid-cols-12;
+}
+
+.align-header {
+    @apply flex flex-wrap items-center gap-1 sm:justify-between;
+}
+
+.align-buttons-submit {
+    @apply mt-4 flex items-center justify-center space-x-1;
+}
+
+.align-buttons-card-footer {
+    @apply flex items-center justify-end space-x-1;
+}
+
+.max-cols-1 {
+    @apply col-span-1 md:col-span-1;
+}
+
+.max-cols-2 {
+    @apply col-span-1 md:col-span-2;
+}
+
+.max-cols-3 {
+    @apply col-span-1 md:col-span-3;
+}
+
+.max-cols-4 {
+    @apply col-span-1 md:col-span-4;
+}
+
+.max-cols-5 {
+    @apply col-span-1 md:col-span-5;
+}
+
+.max-cols-6 {
+    @apply col-span-1 md:col-span-6;
+}
+
+.max-cols-7 {
+    @apply col-span-1 md:col-span-7;
+}
+
+.max-cols-8 {
+    @apply col-span-1 md:col-span-8;
+}
+
+.max-cols-9 {
+    @apply col-span-1 md:col-span-9;
+}
+
+.max-cols-10 {
+    @apply col-span-1 md:col-span-10;
+}
+
+.max-cols-11 {
+    @apply col-span-1 md:col-span-11;
+}
+
+.max-cols-12 {
+    @apply col-span-1 md:col-span-12;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    @apply h-2 w-2;
+}
+
+*::-webkit-scrollbar-track {
+    @apply rounded bg-primary-200 dark:bg-surface-700/50;
+}
+
+*::-webkit-scrollbar-thumb {
+    @apply rounded bg-primary-500 dark:bg-surface-500;
+}
+
+*::-webkit-scrollbar-thumb:horizontal {
+    @apply h-2 rounded bg-primary-500 dark:bg-surface-500;
+}
+
+*::-webkit-scrollbar-corner {
+    @apply bg-transparent;
+}
+
+::selection {
+    @apply bg-primary-300/90 text-surface-900;
+}
+
+.dark ::selection {
+    @apply bg-primary-800 text-surface-100
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:invalid,
+input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #232323;
+    transition: background-color 2000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #e0e6ee29; /* Fondo claro */
+}
+
+input {
+    @apply caret-primary-600;
+}
+
+.dark input:-webkit-autofill,
+.dark input:-webkit-autofill:hover,
+.dark input:-webkit-autofill:focus,
+.dark input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #e0e6ee !important; /* Forzar color claro */
+    transition: background-color 2000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #23232329; /* Fondo oscuro */
+}
+
+.dark input:-moz-ui-invalid, /* Firefox */
+.dark input:invalid {
+    color: #e0e6ee !important; /* Forzar color del texto */
+    text-decoration: none !important; /* Evitar subrayado rojo del navegador */
 }
