add endpoint and add validation for get data reniec, add totals, add components for members and totals, etc.

--- a/src/assets/primevue/tailwind.css
+++ b/src/assets/primevue/tailwind.css
@@ -14,6 +14,8 @@
 @import 'multiselect.css';
 @import 'password.css';
 @import 'radiobutton.css';
+@import 'selectbutton.css';
+@import 'togglebutton.css';
 @import 'select.css';
 @import 'textarea.css';
 /* Button */
